# CAOS_TailWatch

./: .env.example  .gitattributes  .gitignore  ATTRIBUTION.md  CHANGELOG.md  LICENSE  LICENSES.md  README.md  STRUCTURE.md  VERSION  package-lock.json  package.json  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements-gpu.txt  requirements-precompute.txt  requirements.txt
.github/workflows/: ci.yml  deploy-pages.yml
app/: README.md  __init__.py  config.py  main.py
app/models/: schemas.py
app/routers/: content.py
app/services/: content.py
data/: README.md
data-pipeline/: README.md
data-pipeline/twlab/: __init__.py  live.py  pipeline.py  registry.py
data/derived/: ae.onnx  tw-cases.json  tw-real-cf.provenance.json
data/examples/: scenes.csv
deploy/: README.md  domain.nginx  fasl-slug.service  pages.md
docs/: README.md
docs/architecture/: 01_overview.md  02_determinism-and-trace.md  03_the-gate.md  04_the-live-lane.md  05_precompute-pipeline.md  06_model-evaluation.md  07_deploy.md  08_data-contracts.md  README.md
docs/cases/: README.md
frontend/: copy-data.mjs  index.html  package-lock.json  package.json  spa-404.mjs  tsconfig.json  vite.config.ts
manuscripts/: .gitignore
public/: CNAME  cnn.onnx  tw-cases.json  tw-demo.json
scripts/: README.md  check_artifacts.py  check_content_standards.py  dev.ps1  dev.sh  precompute.ps1  precompute.sh  setup.ps1  setup.sh  smoke.ps1  smoke.sh
src/: main.tsx  tailwatch.css
tests/: conftest.py  test_contract.py  test_forecast_controls.py  test_manifest.py  test_pipeline_smoke.py
(+94 files in other folders)
